--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,21 +1,21 @@
 {
   "green-pass-activation": {
-    "invalid-qr-code-title": "Invalid QR Code!",
-    "invalid-qr-code-body": "This QR code is not a valid 3-G evidence. Please use another one or select the manual 3-G inspection at the ticket store."
+    "invalid-qr-code-title": "Invalid QR code!",
+    "invalid-qr-code-body": "This QR code is not a valid 3-G-evidence. Please use another one or select the manual 3-G inspection at the ticket store."
   },
   "acquire-ticket": {
     "title": "Acquire ticket for a place",
     "description": "Here you can acquire a ticket for a location at TU Graz.",
-    "activation-link": "activate 3-G evidence",
-    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have activated a 3-G evidence, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3-G evidence yet, please use the menu item ",
-    "additional-information-2": " to activate a evidence. Alternatively, you can manually confirm that you are carrying 3-G evidence and be able to prove it in case of a manual control.",
-    "no-proof-found-message": "No valid 3-G evidence was found. Please activate a valid 3-G detection under the menu item ",
-    "valid-proof-found-message": "A valid 3-G evidence was found. Please select a location to create a ticket.",
+    "activation-link": "activate 3-G-evidence",
+    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have activated a 3-G-evidence, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3-G-evidence yet, please use the menu item ",
+    "additional-information-2": " to activate a evidence. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
+    "no-proof-found-message": "No valid 3-G-evidence was found. Please activate a valid 3-G detection under the menu item ",
+    "valid-proof-found-message": "A valid 3-G-evidence was found. Please select a location to create a ticket.",
     "place-select-title": "Select a place",
     "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
     "refresh-button-text": "Refresh Ticket",
-    "no-proof-continue": "Acquire ticket without 3-G evidence",
+    "no-proof-continue": "Acquire ticket without 3-G-evidence",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
     "other-error-title": "Error!",
@@ -26,16 +26,16 @@
     "manage-tickets-text": "You can manage your active tickets at: "
   },
   "acquire-3g-ticket": {
-    "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3G evidence and be able to prove it in case of a manual control.",
-    "invalid-qr-code": "No valid 3-G evidence found.",
+    "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
+    "invalid-qr-code": "No valid 3-G-evidence found.",
     "no-qr-code": "No QR code was found.",
     "no-qr-code-title": "No QR code found!",
     "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3-G inspection at the ticket store.",
-    "qr-button-text": "Scan QR Code",
+    "qr-button-text": "Scan QR code",
     "manually-button-text": "Upload File",
     "filepicker-button-title": "Choose File",
     "filepicker-context": "Choose File for 3-G Verification",
-    "manual-uploading-message": "Search for valid QR Code...",
+    "manual-uploading-message": "Search for valid QR code...",
     "place-select-title": "Select a place",
     "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
@@ -48,8 +48,8 @@
     "skip-button-text": "Skip",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
-    "3g-proof-label-text": "Import 3-G evidence",
-    "found-valid-3g-preCheck": "Stored valid 3-G evidence could be found.",
+    "3g-proof-label-text": "Import 3-G-evidence",
+    "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
     "found-valid-selftest-preCheck": "A locally saved self-test was found.",
     "found-valid-selftest": "A self-test was found.",
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
@@ -61,20 +61,20 @@
     "validate-error-body": "Please try again or skip the process.",
     "hcert-invalid": "Uploaded evidence is invalid.",
     "hcert-invalid-title": "Uploaded evidence is invalid.",
-    "hcert-invalid-body": "The uploaded evidence is not sufficient. Please upload a valid 3-G evidence or skip the process.",
-    "found-valid-3g": "A valid 3-G evidence was imported.",
+    "hcert-invalid-body": "The uploaded evidence is not sufficient. Please upload a valid 3-G-evidence or skip the process.",
+    "found-valid-3g": "A valid 3-G-evidence was imported.",
     "remove-proof": "Remove evidence",
     "failed-activation-wrong-person-title": "Inconsistencies found",
     "failed-activation-wrong-person-body": "The person from the uploaded evidence does not match the person logged in.",
     "self-test": "Selftest",
     "self-test-link": "Link",
     "self-test-information": "Please check whether the evidence is still valid.",
-    "3g-proof": "3-G evidence",
+    "3g-proof": "3-G-evidence",
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "expected to be valid until {{date}}",
     "3g-proof-proof-from": "From",
     "3g-proof-birthdate": "birthdate",
-    "trust-and-save": "Trust this device and import 3-G evidence.",
+    "trust-and-save": "Trust this device and import 3-G-evidence.",
     "create-new-ticket": "Create new ticket"
 
   },
@@ -96,12 +96,12 @@
     "other-error-title": "Error!",
     "other-error-body": "An unknown error occurred.",
     "preselected-place": "Place",
-    "3g-evidence": "3-G evidence:",
+    "3g-evidence": "3-G-evidence:",
     "self-test-found": "Self-test found",
     "self-test-information": "Please check whether the evidence is still valid.",
     "self-test": "self-test",
     "self-test-link": "Link to the test",
-    "no-evidence": "No valid stored 3-G evidence was found. Show your evidence manually or upload new evidence by creating a new ticket."
+    "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload new evidence by creating a new ticket."
   },
   "error-login-message": "You need to be logged in to use this function!",
   "loading-message": "Loading...",
