Change multiple texts, line, distances between buttons and delete skip button

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -12,7 +12,7 @@
     "no-proof-found-message": "No valid 3-G-evidence was found. Please activate a valid 3-G detection under the menu item ",
     "valid-proof-found-message": "A valid 3-G-evidence was found. Please select a location to create a ticket.",
     "place-select-title": "Select a place",
-    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
+    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this place and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
     "refresh-button-text": "Refresh Ticket",
     "no-proof-continue": "Acquire ticket without 3-G-evidence",
@@ -37,7 +37,7 @@
     "filepicker-context": "Choose File for 3-G Verification",
     "manual-uploading-message": "Search for valid QR code...",
     "place-select-title": "Select a place",
-    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
+    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this place and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
     "create-ticket": "Create ticket",
     "create-ticket-success-title": "Ticket successfully created!",
@@ -59,7 +59,7 @@
     "validate-error": "An error has occurred.",
     "validate-error-title": "An error has occurred",
     "validate-error-body": "Please try again or skip the process.",
-    "hcert-invalid": "Uploaded evidence is invalid.",
+    "hcert-invalid": "The uploaded evidence is invalid.",
     "hcert-invalid-title": "Uploaded evidence is invalid.",
     "hcert-invalid-body": "The uploaded evidence is not sufficient. Please upload a valid 3-G-evidence or skip the process.",
     "found-valid-3g": "A valid 3-G-evidence was imported.",
@@ -71,12 +71,13 @@
     "self-test-information": "Please check whether the evidence is still valid.",
     "3g-proof": "3-G-evidence",
     "3g-proof-status": "Status",
-    "3g-proof-status-valid": "expected to be valid until {{date}}",
+    "3g-proof-status-valid": "valid until {{date}}",
     "3g-proof-proof-from": "From",
     "3g-proof-birthdate": "birthdate",
-    "trust-and-save": "Trust this device and import 3-G-evidence.",
-    "create-new-ticket": "Create new ticket"
-
+    "trust-and-save-1": "Trust this device.",
+    "trust-and-save-2": "Import my 3-G-evidence and save it to this device.",
+    "create-new-ticket": "Request new ticket",
+    "request-ticket-button-text": "Request ticket"
   },
   "show-active-tickets": {
     "title": "Show all active tickets",
