--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -12,7 +12,7 @@
     "no-proof-found-message": "Es wurde kein gültiger 3-G-Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3-G-Nachweis unter dem Menüpunkt ",
     "valid-proof-found-message": "Es wurde ein gültiger 3-G-Nachweis gefunden.",
     "place-select-title": "Ort auswählen",
-    "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
+    "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Ort bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
     "refresh-button-text": "Ticket verlängern",
     "no-proof-continue": "Ticket ohne 3-G-Nachweis erstellen",
@@ -37,7 +37,7 @@
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
     "manual-uploading-message": "Suche nach validem QR-Code...",
     "place-select-title": "Ticket für",
-    "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
+    "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Ort bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
     "create-ticket": "Ticket erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
@@ -50,7 +50,7 @@
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G-Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
-    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
+    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G-Nachweis importiert.",
     "found-valid-selftest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
     "found-valid-selftest": "Es wurden ein Selbsttest gefunden.",
@@ -61,7 +61,7 @@
     "validate-error": "Ein Fehler ist aufgetreten.",
     "validate-error-title": "Ein Fehler ist aufgetreten",
     "validate-error-body": "Bitte versuchen Sie es noch einmal oder überspringen Sie den Vorgang.",
-    "hcert-invalid": "Hochgeladener Nachweis ist ungültig.",
+    "hcert-invalid": "Der hochgeladene Nachweis ist ungültig.",
     "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
     "hcert-invalid-body": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt gültig. Bitte laden Sie einen gültigen 3-G-Nachweis hoch oder überspringen Sie den Vorgang.",
     "failed-activation-wrong-person-title": "Unstimmigkeiten gefunden",
@@ -71,11 +71,13 @@
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "3g-proof": "3-G-Nachweis",
     "3g-proof-status": "Status",
-    "3g-proof-status-valid": "voraussichtlich gültig bis {{date}}",
+    "3g-proof-status-valid": "gültig bis {{date}}",
     "3g-proof-proof-from": "Von",
     "3g-proof-birthdate": "Geburtsdatum",
-    "trust-and-save": "Diesem Gerät vertrauen und 3-G-Nachweis importieren.",
-    "create-new-ticket": "Neues Ticket erstellen"
+    "trust-and-save-1": "Diesem Gerät vertrauen.",
+    "trust-and-save-2": "Meinen 3-G-Nachweis importieren und auf diesem Gerät speichern.",
+    "create-new-ticket": "Neues Ticket anfordern",
+    "request-ticket-button-text": "Ticket anfordern"
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
