Change date and time for 3-g-evidence validity and fix a translation bug

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -71,7 +71,8 @@
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "3g-proof": "3-G-Nachweis",
     "3g-proof-status": "Status",
-    "3g-proof-status-valid": "gültig bis {{date}}",
+    "3g-proof-status-valid-1": "gültig bis ",
+    "3g-proof-status-valid-2": "{{clock}} Uhr am {{date}}",
     "3g-proof-proof-from": "Von",
     "3g-proof-birthdate": "Geburtsdatum",
     "trust-and-save-1": "Diesem Gerät vertrauen.",
