--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -44,7 +44,7 @@
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
     "check-in-link-description": "Also consider using contact tracing!",
     "manage-tickets-link": "Show active tickets",
-    "manage-tickets-text": "You can manage your active tickets at: ",
+    "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
     "skip-button-text": "Skip",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
@@ -71,9 +71,10 @@
     "self-test-information": "Please check whether the evidence is still valid.",
     "3g-proof": "3-G-evidence",
     "3g-proof-status": "Status",
-    "3g-proof-status-valid": "valid until {{date}}",
+    "3g-proof-status-valid-1": "valid until ",
+    "3g-proof-status-valid-2": "{{clock}} on {{date}}",
     "3g-proof-proof-from": "From",
-    "3g-proof-birthdate": "birthdate",
+    "3g-proof-birthdate": "Birthdate",
     "trust-and-save-1": "Trust this device.",
     "trust-and-save-2": "Import my 3-G-evidence and save it to this device.",
     "create-new-ticket": "Request new ticket",
