Adapt show ticket UI

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -90,7 +90,7 @@
     "delete-btn-text": "Löschen",
     "show-btn-text": "Zeigen",
     "refresh-btn-text": "Verlängern",
-    "show-ticket-title": "Ticket für Ort: ",
+    "show-ticket-title": "Ticket: ",
     "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
     "refresh-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich verlängert.",
     "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
@@ -98,14 +98,15 @@
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "preselected-place": "Ort",
-    "3g-evidence": "3-G-Nachweis:",
-    "self-test-found": "Selbsttest gefunden",
+    "3g-evidence": "3-G-Nachweis: Grüner Pass gefunden",
+    "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test": "Selbsttest",
     "self-test-link": "Link zum Test",
     "no-evidence": "Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen.",
     "invalid-evidence": "Falls der 3-G-Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen."
   },
+  "valid-till": "Gültig bis: {{clock}} Uhr am",
   "error-login-message": "Sie müssen eingeloggt sein um diese Funktion nutzen zu können!",
   "loading-message": "Lädt...",
   "file-sink": {
