--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -90,7 +90,7 @@
     "delete-btn-text": "Delete",
     "show-btn-text": "Show",
     "refresh-btn-text": "Refresh",
-    "show-ticket-title": "Ticket for place: ",
+    "show-ticket-title": "Ticket: ",
     "refresh-ticket-success-title": "Ticket successfully refreshed!",
     "refresh-ticket-success-body": "The ticket for {{place}} was successfully refreshed.",
     "delete-ticket-success-title": "Ticket successfully deleted!",
@@ -98,14 +98,15 @@
     "other-error-title": "Error!",
     "other-error-body": "An unknown error occurred.",
     "preselected-place": "Place",
-    "3g-evidence": "3-G-evidence:",
-    "self-test-found": "Self-test found",
+    "3g-evidence": "3-G-evidence: Found Green Pass",
+    "self-test-found": "3-G-evidence: Self-test found",
     "self-test-information": "Please check whether the evidence is still valid.",
     "self-test": "self-test",
     "self-test-link": "Link to the test",
     "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload new evidence by creating a new ticket.",
     "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence."
   },
+  "valid-till": "Valid until: {{clock}} on",
   "error-login-message": "You need to be logged in to use this function!",
   "loading-message": "Loading...",
   "file-sink": {
