--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -99,6 +99,7 @@
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "preselected-place": "Ort",
     "3g-evidence": "3-G-Nachweis: Grüner Pass gefunden",
+    "no-3g-evidence": "Keinen 3-G-Nachweis gefunden",
     "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test": "Selbsttest",
