Change app name (lowercase) and change validation/error messages

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,8 +1,4 @@
 {
-  "green-pass-activation": {
-    "invalid-qr-code-title": "Ungültiger QR-Code!",
-    "invalid-qr-code-body": "Dieser QR-Code enthält keinen gültigen 3-G-Nachweis. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G-Nachweises aus."
-  },
   "acquire-ticket": {
     "title": "Ticket für Ort ausstellen",
     "description": "Hier können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
@@ -28,9 +24,6 @@
   "acquire-3g-ticket": {
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR-Code scannen oder ein vorhandenes PDF oder Bild mit QR-Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
     "invalid-qr-code": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
-    "no-qr-code": "Es wurde kein QR-Code gefunden.",
-    "no-qr-code-title": "Kein QR-Code gefunden!",
-    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR-Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G-Nachweises aus.",
     "qr-button-text": "QR-Code scannen",
     "manually-button-text": "Datei hochladen",
     "filepicker-button-title": "PDF oder Bild auswählen",
@@ -50,22 +43,17 @@
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G-Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
-    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G Informationen gefunden.",
+    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G-Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G-Nachweis importiert.",
-    "found-valid-selftest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
-    "found-valid-selftest": "Es wurden ein Selbsttest gefunden.",
+    "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
+    "found-valid-selftest": "Es wurde ein Selbsttest gefunden.",
+    "invalid-document": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt gültig.",
+    "invalid-document-prefix": "Technische Details: ",
+    "no-qr-code": "Kein QR-Code gefunden!",
+    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR-Code gefunden.",
+    "invalid-title": "Validierung fehlgeschlagen!",
+    "invalid-body": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
     "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
-    "cannot-process-data": "Der hochgeladene Nachweis konnte nicht verarbeitet werden.",
-    "cannot-process-data-title": "Problem bei der Verarbeitung aufgetreten",
-    "cannot-process-data-body": "Der hochgeladene Nachweis konnte nicht verarbeitet werden. Bitte laden Sie einen gültigen 3-G-Nachweis hoch oder überspringen Sie den Upload Vorgang.",
-    "validate-error": "Ein Fehler ist aufgetreten.",
-    "validate-error-title": "Ein Fehler ist aufgetreten",
-    "validate-error-body": "Bitte versuchen Sie es noch einmal oder überspringen Sie den Vorgang.",
-    "hcert-invalid": "Der hochgeladene Nachweis ist ungültig.",
-    "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
-    "hcert-invalid-body": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt gültig. Bitte laden Sie einen gültigen 3-G-Nachweis hoch oder überspringen Sie den Vorgang.",
-    "failed-activation-wrong-person-title": "Unstimmigkeiten gefunden",
-    "failed-activation-wrong-person-body": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
     "self-test": "Selbsttest",
     "self-test-link": "Link",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
