--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,8 +1,4 @@
 {
-  "green-pass-activation": {
-    "invalid-qr-code-title": "Invalid QR code!",
-    "invalid-qr-code-body": "This QR code is not a valid 3-G-evidence. Please use another one or select the manual 3-G inspection at the ticket store."
-  },
   "acquire-ticket": {
     "title": "Acquire ticket for a place",
     "description": "Here you can acquire a ticket for a location at TU Graz.",
@@ -28,9 +24,6 @@
   "acquire-3g-ticket": {
     "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
     "invalid-qr-code": "No valid 3-G-evidence found.",
-    "no-qr-code": "No QR code was found.",
-    "no-qr-code-title": "No QR code found!",
-    "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3-G inspection at the ticket store.",
     "qr-button-text": "Scan QR code",
     "manually-button-text": "Upload File",
     "filepicker-button-title": "Choose File",
@@ -49,23 +42,18 @@
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "3g-proof-label-text": "Import 3-G-evidence",
+    "remove-proof": "Remove evidence",
     "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
+    "found-valid-3g": "A valid 3-G-evidence was imported.",
     "found-valid-selftest-preCheck": "A locally saved self-test was found.",
     "found-valid-selftest": "A self-test was found.",
+    "invalid-document": "3-G-evidence is currently not valid.",
+    "invalid-document-prefix": "Technical details: ",
+    "no-qr-code": "No QR code found!",
+    "no-qr-code-body": "No QR code was found in the uploaded document.",
+    "invalid-title": "Validation failed!",
+    "invalid-body": "The QR code does not contain a valid 3-G-evidence.",
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
-    "cannot-process-data": "The uploaded evidence could not be processed.",
-    "cannot-process-data-title": "There was a problem processing",
-    "cannot-process-body-data": "The uploaded evidence could not be processed. Please try again or skip the upload process.",
-    "validate-error": "An error has occurred.",
-    "validate-error-title": "An error has occurred",
-    "validate-error-body": "Please try again or skip the process.",
-    "hcert-invalid": "The uploaded evidence is invalid.",
-    "hcert-invalid-title": "Uploaded evidence is invalid.",
-    "hcert-invalid-body": "The uploaded evidence is not sufficient. Please upload a valid 3-G-evidence or skip the process.",
-    "found-valid-3g": "A valid 3-G-evidence was imported.",
-    "remove-proof": "Remove evidence",
-    "failed-activation-wrong-person-title": "Inconsistencies found",
-    "failed-activation-wrong-person-body": "The person from the uploaded evidence does not match the person logged in.",
     "self-test": "Selftest",
     "self-test-link": "Link",
     "self-test-information": "Please check whether the evidence is still valid.",
