--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -66,7 +66,9 @@
     "trust-and-save-1": "Trust this device.",
     "trust-and-save-2": "Import my 3-G-evidence and save it to this device.",
     "create-new-ticket": "Request new ticket",
-    "request-ticket-button-text": "Request ticket"
+    "request-ticket-button-text": "Request ticket",
+    "confirm-not-checked-title": "Consent not given!",
+    "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences"
   },
   "show-active-tickets": {
     "title": "Show all active tickets",
