--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -95,7 +95,9 @@
     "self-test": "self-test",
     "self-test-link": "Link to the test",
     "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload new evidence by creating a new ticket.",
-    "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence."
+    "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence.",
+    "delete-ticket-notfound-title": "Ticket not found!",
+    "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted."
   },
   "valid-till": "Valid until: {{clock}} on",
   "error-login-message": "You need to be logged in to use this function!",
