Add link to tooltip and more tooltips for detailed error messages. Change error messages and fix a small bug.

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -52,7 +52,8 @@
     "no-qr-code": "No QR code found!",
     "no-qr-code-body": "No QR code was found in the uploaded document.",
     "invalid-title": "Validation failed!",
-    "invalid-body": "The QR code does not contain a valid 3-G-evidence.",
+    "invalid-body": "Please try again with another document.",
+    "invalid-qr-body": "The QR code does not contain a valid 3-G-evidence.",
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
     "self-test": "Selftest",
     "self-test-link": "Link",
