--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -39,8 +39,8 @@
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
-    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-no-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G-Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G-Informationen gefunden.",
@@ -52,7 +52,8 @@
     "no-qr-code": "Kein QR-Code gefunden!",
     "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR-Code gefunden.",
     "invalid-title": "Validierung fehlgeschlagen!",
-    "invalid-body": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
+    "invalid-body": "Bitte versuchen Sie es mit einem anderen Dokument noch einmal.",
+    "invalid-qr-body": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
     "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
     "self-test": "Selbsttest",
     "self-test-link": "Link",
