Change import consent text and add info tooltip

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -64,8 +64,8 @@
     "3g-proof-status-valid-2": "{{clock}} on {{date}}",
     "3g-proof-proof-from": "From",
     "3g-proof-birthdate": "Birthdate",
-    "trust-and-save-1": "Trust this device.",
-    "trust-and-save-2": "Import my 3-G-evidence and save it to this device.",
+    "trust-and-save-1": "I agree to import my 3-G evidence and store this data on my device.",
+    "trust-and-save-2": "If you select this option, your data will be stored only on this device and only for this website.",
     "create-new-ticket": "Request new ticket",
     "request-ticket-button-text": "Request ticket",
     "confirm-not-checked-title": "Consent not given!",
