--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -64,8 +64,8 @@
     "3g-proof-status-valid-2": "{{clock}} Uhr am {{date}}",
     "3g-proof-proof-from": "Von",
     "3g-proof-birthdate": "Geburtsdatum",
-    "trust-and-save-1": "Diesem Gerät vertrauen.",
-    "trust-and-save-2": "Meinen 3-G-Nachweis importieren und auf diesem Gerät speichern.",
+    "trust-and-save-1": "Ich stimme zu, meinen 3-G-Nachweis zu importieren und diese Daten auf meinem Gerät zu speichern.",
+    "trust-and-save-2": "Wenn Sie diese Option wählen, werden Ihre Daten nur auf diesem Gerät und nur für diese Webseite gespeichert.",
     "create-new-ticket": "Neues Ticket anfordern",
     "request-ticket-button-text": "Ticket anfordern",
     "confirm-not-checked-title": "Zustimmung nicht erteilt!",
