--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -42,7 +42,7 @@
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "3g-proof-label-text": "Import 3-G-evidence",
-    "valid-till": "Valid until: ",
+    "valid-till": "valid until ",
     "remove-proof": "Remove evidence",
     "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
     "found-valid-3g": "A valid 3-G-evidence was imported.",
@@ -101,6 +101,7 @@
     "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted."
   },
   "validity-tooltip": "According to the current regulations",
+  "validity-tooltip-2": "Current regulations",
   "valid-till": "Probably valid until: ",
   "date-time": "{{clock}} on {{date}}",
   "error-login-message": "You need to be logged in to use this function!",
