--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -99,7 +99,8 @@
     "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence.",
     "delete-ticket-notfound-title": "Ticket not found!",
     "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted.",
-    "status": "Status: "
+    "status": "Status: ",
+    "loading-message-ticket": "Loading the ticket ..."
   },
   "validity-tooltip": "According to the current regulations",
   "validity-tooltip-2": "Current regulations",
